--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git Learning</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>Git Learning</h1>
-    <p>Vanakam da Mapla Theni la irunthu.....</p>
+    <p>Vanakam da Mapla Theni la irunthu..... Ungal Naan </p>
     <ul>
         <li>Hello</li>
         <li>Welcome</li>
