--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <ul>
         <li>Hello</li>
         <li>Welcome</li>
-        <li>How Are u</li>
-        <li>Thank you!!!</li>
+        <li>How r u</li>
+        <li>Thank you</li>
     </ul>
 </body>
 </html>
