--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git Learning</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/all.css">
 </head>
 <body>
     <h1>Git Learning</h1>
@@ -16,5 +17,6 @@
         <li>How r u</li>
         <li>Thank you</li>
     </ul>
+    <ul><li><i class="fab fa-facebook"></i></li></ul>
 </body>
 </html>
